--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <h1 style="font-size:25px" class="navbar-brand">King Kamir</h1>
-        <img style="width:50px; border-radius:30px; margin-right:50px" src="img/logo.jpg">
+        <img style="width:50px; border-radius:30px; margin-right:50px" src="logo.jpg">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
