--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade mt-2">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/logo.jpg" style="height:350px" class="d-block w-100" alt="...">
+      <img src="logo.jpg" style="height:350px" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/logo2.jpg" style="height:350px" class="d-block w-100" alt="...">
+      <img src="logo2.jpg" style="height:350px" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/logo_rasa.jpg" style="height:350px" class="d-block w-100" alt="logo king kamir">
+      <img src="logo_rasa.jpg" style="height:350px" class="d-block w-100" alt="logo king kamir">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
