--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light custom-navbar">
       <div class="container-fluid">
-        <img src="img/logo.jpg" alt="Logo" class="navbar-brand-img">
+        <img src="logo.jpg" alt="Logo" class="navbar-brand-img">
         <span class="navbar-brand brand-gradient">King Kamir</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
